Fixed the text align of product list items

--- a/src/scss/molecules/product-list-item.scss
+++ b/src/scss/molecules/product-list-item.scss
@@ -84,6 +84,7 @@
             right: var(--base-spacing);
             bottom: 0;
         }
+        text-align: left;
 
         &::after {
             content: "";
